frontend update to 25.11.078