@@ -10,22 +10,17 @@
 
 package com.agnitas.emm.core.mailingcontent.web;
 
-import static com.agnitas.util.Const.Mvc.CHANGES_SAVED_MSG;
-import static com.agnitas.util.Const.Mvc.ERROR_MSG;
 import static com.agnitas.util.Const.Mvc.MESSAGES_VIEW;
 
-import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 import com.agnitas.beans.Admin;
-import com.agnitas.beans.DynamicTag;
 import com.agnitas.beans.Mailing;
-import com.agnitas.beans.TargetLight;
+import com.agnitas.beans.MailingComponent;
 import com.agnitas.dao.ProfileFieldDao;
 import com.agnitas.emm.core.Permission;
 import com.agnitas.emm.core.maildrop.service.MaildropService;
+import com.agnitas.emm.core.mailing.exception.MailingNotExistException;
 import com.agnitas.emm.core.mailing.service.MailingBaseService;
 import com.agnitas.emm.core.mailing.service.MailingPropertiesRules;
 import com.agnitas.emm.core.mailing.service.MailingService;
@@ -33,28 +28,20 @@ import com.agnitas.emm.core.mailingcontent.dto.DynTagDto;
 import com.agnitas.emm.core.mailingcontent.enums.ContentGenerationTonality;
 import com.agnitas.emm.core.mailingcontent.form.FrameContentForm;
 import com.agnitas.emm.core.mailingcontent.form.MailingContentForm;
-import com.agnitas.emm.core.mailingcontent.validator.DynTagChainValidator;
 import com.agnitas.emm.core.mailinglist.service.MailinglistApprovalService;
 import com.agnitas.emm.core.mediatypes.common.MediaTypes;
 import com.agnitas.emm.core.mediatypes.service.MediaTypesService;
+import com.agnitas.emm.core.target.beans.TargetGroupDeliveryOption;
 import com.agnitas.emm.core.target.service.TargetService;
-import com.agnitas.service.AgnDynTagGroupResolverFactory;
-import com.agnitas.service.AgnTagService;
-import com.agnitas.service.ExtendedConversionService;
 import com.agnitas.service.GridServiceWrapper;
 import com.agnitas.service.MailingContentService;
-import com.agnitas.service.ServiceResult;
+import com.agnitas.service.UserActivityLogService;
 import com.agnitas.util.preview.PreviewImageService;
-import com.agnitas.web.dto.DataResponseDto;
 import com.agnitas.web.mvc.Popups;
 import com.agnitas.web.mvc.XssCheckAware;
+import com.agnitas.web.perm.NotAllowedActionException;
+import com.agnitas.web.perm.annotations.RequiredPermission;
 import jakarta.servlet.http.HttpSession;
-import com.agnitas.beans.MailingComponent;
-import org.agnitas.emm.core.mailing.service.MailingNotExistException;
-import com.agnitas.emm.core.useractivitylog.bean.UserAction;
-import com.agnitas.service.UserActivityLogService;
-import com.agnitas.service.UserMessageException;
-import com.agnitas.util.AgnUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.http.ResponseEntity;
@@ -64,7 +51,6 @@ import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.ResponseBody;
 
 public class MailingContentController implements XssCheckAware {
 
@@ -81,18 +67,13 @@ public class MailingContentController implements XssCheckAware {
     private final MailingPropertiesRules mailingPropertiesRules;
     private final MailingBaseService mailingBaseService;
     private final GridServiceWrapper gridServiceWrapper;
-    private final AgnDynTagGroupResolverFactory agnDynTagGroupResolverFactory;
-    private final AgnTagService agnTagService;
     private final PreviewImageService previewImageService;
-    private final DynTagChainValidator dynTagChainValidator;
-    private final ExtendedConversionService extendedConversionService;
 
     public MailingContentController(MailinglistApprovalService mailinglistApprovalService, MailingService mailingService, MaildropService maildropService,
                                     MailingContentService mailingContentService, TargetService targetService,
                                     UserActivityLogService userActivityLogService, ProfileFieldDao profileFieldDao, MailingPropertiesRules mailingPropertiesRules,
-                                    MailingBaseService mailingBaseService, GridServiceWrapper gridServiceWrapper, AgnDynTagGroupResolverFactory agnDynTagGroupResolverFactory,
-                                    AgnTagService agnTagService, PreviewImageService previewImageService, DynTagChainValidator dynTagChainValidator,
-                                    ExtendedConversionService extendedConversionService, MediaTypesService mediaTypesService) {
+                                    MailingBaseService mailingBaseService, GridServiceWrapper gridServiceWrapper,
+                                    PreviewImageService previewImageService, MediaTypesService mediaTypesService) {
         this.mailinglistApprovalService = mailinglistApprovalService;
         this.mailingService = mailingService;
         this.maildropService = maildropService;
@@ -103,15 +84,12 @@ public class MailingContentController implements XssCheckAware {
         this.mailingPropertiesRules = mailingPropertiesRules;
         this.mailingBaseService = mailingBaseService;
         this.gridServiceWrapper = gridServiceWrapper;
-        this.agnDynTagGroupResolverFactory = agnDynTagGroupResolverFactory;
-        this.agnTagService = agnTagService;
         this.previewImageService = previewImageService;
-        this.dynTagChainValidator = dynTagChainValidator;
-        this.extendedConversionService = extendedConversionService;
         this.mediaTypesService = mediaTypesService;
     }
 
     @GetMapping("/{mailingId:\\d+}/view.action")
+    @RequiredPermission("mailing.content.show")
     public String viewContent(@PathVariable("mailingId") int mailingId, @ModelAttribute("form") MailingContentForm form, Admin admin, Model model) {
         form.setShowHTMLEditor(true);
 
@@ -122,10 +100,11 @@ public class MailingContentController implements XssCheckAware {
                 String.format("%s (%d)", form.getShortname(), form.getMailingID()));
         writeUserActivityLog(admin, "view content", "active tab - content");
 
-        return "mailing_content_list";
+        return "mailing_content";
     }
 
     @GetMapping("/name/{id:\\d+}/view.action")
+    @RequiredPermission("mailing.content.show")
     public ResponseEntity<DynTagDto> view(Admin admin, @PathVariable("id") int dynNameId) {
         DynTagDto dto = mailingContentService.getDynTag(admin.getCompanyID(), dynNameId);
 
@@ -136,68 +115,27 @@ public class MailingContentController implements XssCheckAware {
         return ResponseEntity.ok(dto);
     }
 
-    @PostMapping("/save.action")
-    public @ResponseBody
-    // TODO: EMMGUI-714: Check usages and remove if not used after remove of old design
-    DataResponseDto<DynTagDto> save(Admin admin, HttpSession session, @RequestBody DynTagDto dynTagDto, Popups popups) {
-        if (mailingService.isSettingsReadonly(admin, dynTagDto.getMailingId())) {
-            popups.alert(ERROR_MSG);
-            return new DataResponseDto<>(popups, false);
+    @PostMapping("/{mailingId:\\d+}/save.action")
+    @RequiredPermission("mailing.content.show")
+    public ResponseEntity<Popups> save(@PathVariable int mailingId, Admin admin, HttpSession session,
+                       @RequestBody List<DynTagDto> dynTags, Popups popups) {
+        if (mailingService.isSettingsReadonly(admin, mailingId)) {
+            throw new NotAllowedActionException();
         }
-
-        if (!dynTagChainValidator.validate(dynTagDto, popups, admin)) {
-            return new DataResponseDto<>(popups, false);
+        mailingContentService.saveDynTags(mailingId, dynTags, admin, popups);
+        if (!popups.hasAlertPopups()) {
+            previewImageService.generateMailingPreview(admin, session.getId(), mailingId, true);
+            popups.changesSaved();
         }
-
-        Mailing mailing = mailingService.getMailing(admin.getCompanyID(), dynTagDto.getMailingId());
-
-        try {
-            // editing or creating
-            ServiceResult<List<UserAction>> serviceResult = mailingContentService.updateDynContent(mailing, dynTagDto, admin, popups);
-            if (!serviceResult.isSuccess()) {
-                popups.addPopups(serviceResult);
-                return new DataResponseDto<>(popups, false);
-            }
-
-            List<UserAction> userActions = serviceResult.getResult();
-            userActions.forEach(action -> userActivityLogService.writeUserActivityLog(admin, action));
-            logger.info(String.format("Content of mailing was changed. mailing-name : %s, mailing-id: %d",
-                    mailing.getDescription(), mailing.getId()));
-        } catch (UserMessageException e) {
-            popups.alert(e.getErrorMessageKey(), e.getAdditionalErrorData());
-            return new DataResponseDto<>(popups, false);
-        } catch (Exception e) {
-            logger.error(String.format("Error during building dependencies. mailing-name : %s, mailing-id: %d",
-                    mailing.getDescription(), mailing.getId()), e);
-            popups.alert("error.mailing.save", mailing.getShortname());
-            return new DataResponseDto<>(popups, false);
-        }
-
-        previewImageService.generateMailingPreview(admin, session.getId(), mailing.getId(), true);
-        DynamicTag dynamicTag = mailing.getDynTags().get(dynTagDto.getName());
-        DynTagDto dynTagDtoResponse = extendedConversionService.convert(dynamicTag, DynTagDto.class);
-
-        popups.success("default.changes_saved");
-        return new DataResponseDto<>(dynTagDtoResponse, popups, true);
+        return ResponseEntity.ok(popups);
     }
 
-    @PostMapping("/{mailingId:\\d+}/save.action")
-    public String saveRedesigned(@PathVariable int mailingId, Admin admin, HttpSession session,
-                                 @RequestBody List<DynTagDto> dynTags, Popups popups) {
-        if (mailingService.isSettingsReadonly(admin, mailingId)) {
-            throw new UnsupportedOperationException();
-        }
-
-        mailingContentService.saveDynTags(mailingId, dynTags, admin, popups);
-        if (popups.hasAlertPopups()) {
-            return MESSAGES_VIEW;
-        }
-        previewImageService.generateMailingPreview(admin, session.getId(), mailingId, true);
-        popups.success(CHANGES_SAVED_MSG);
-        return String.format("redirect:/mailing/content/%d/view.action", mailingId);
+    private String redirectToView(int mailingId) {
+        return "redirect:/mailing/content/%d/view.action".formatted(mailingId);
     }
 
     @GetMapping("/{mailingId:\\d+}/text-from-html/confirm.action")
+    @RequiredPermission("mailing.content.show")
     public String confirmGenerateTextFromHtml(@PathVariable("mailingId") int mailingId, Admin admin, Popups popups, Model model) {
         if (!isMailingEditable(admin, mailingId)) {
             popups.alert("status_changed");
@@ -211,18 +149,19 @@ public class MailingContentController implements XssCheckAware {
     }
 
     @PostMapping("/{mailingId:\\d+}/text-from-html/generate.action")
+    @RequiredPermission("mailing.content.show")
     public String generateTextFromHtml(@PathVariable("mailingId") int mailingId, Admin admin, Popups popups) {
         if (!isMailingEditable(admin, mailingId)) {
             popups.alert("status_changed");
         } else {
             if (generateTextContent(admin, mailingId)) {
-                popups.success(CHANGES_SAVED_MSG);
+                popups.changesSaved();
             } else {
-                popups.alert(ERROR_MSG);
+                popups.defaultError();
             }
         }
 
-        return String.format("redirect:/mailing/content/%d/view.action", mailingId);
+        return redirectToView(mailingId);
     }
 
     private boolean generateTextContent(Admin admin, int mailingId) {
@@ -249,29 +188,19 @@ public class MailingContentController implements XssCheckAware {
         boolean isTextGenerationEnabled = !mailing.isIsTemplate() && mailingContentService.isGenerationAvailable(mailing);
         boolean isWorldMailingSend = maildropService.isActiveMailing(mailingId, admin.getCompanyID());
 
-        if (admin.isRedesignedUiUsed()) {
-            model.addAttribute("mailinglistDisabled", !mailinglistApprovalService.isAdminHaveAccess(admin, mailing.getMailinglistID()));
-        } else {
-            boolean isLimitedRecipientOverview = isWorldMailingSend &&
-                    !mailinglistApprovalService.isAdminHaveAccess(admin, mailing.getMailinglistID());
-
-            model.addAttribute("limitedRecipientOverview", isLimitedRecipientOverview);
-        }
-
+        model.addAttribute("mailinglistDisabled", !mailinglistApprovalService.isAdminHaveAccess(admin, mailing.getMailinglistID()));
         model.addAttribute("isWorldMailingSend", isWorldMailingSend);
         model.addAttribute("isTextGenerationEnabled", isTextGenerationEnabled);
         model.addAttribute("isMailingEditable", isMailingEditable(admin, mailingId));
         model.addAttribute("isMailingExclusiveLockingAcquired", isMailingExclusiveLockingAcquired);
         model.addAttribute("contentGenerationTonalities", ContentGenerationTonality.values());
         model.addAttribute("isContentGenerationAllowed", false);
-        if (admin.isRedesignedUiUsed()) {
-            model.addAttribute("mailFormat", mailing.getEmailParam().getMailFormat());
-            model.addAttribute("isSettingsReadonly", mailingService.isSettingsReadonly(admin, mailing.isIsTemplate()));
-            model.addAttribute("MAILING_EDITABLE", isMailingEditable(mailingId, admin));
-            model.addAttribute("showDynamicTemplateToggle", mailingService.isDynamicTemplateCheckboxVisible(mailing));
-            model.addAttribute("isEmailMediaTypeActive", mediaTypesService.getActiveMediaTypes(mailing).contains(MediaTypes.EMAIL));
-            model.addAttribute("frameContentForm", getFrameContentForm(mailing));
-        }
+        model.addAttribute("mailFormat", mailing.getEmailParam().getMailFormat());
+        model.addAttribute("isSettingsReadonly", mailingService.isSettingsReadonly(admin, mailing.isIsTemplate()));
+        model.addAttribute("MAILING_EDITABLE", isMailingEditable(mailingId, admin));
+        model.addAttribute("showDynamicTemplateToggle", mailingService.isDynamicTemplateCheckboxVisible(mailing));
+        model.addAttribute("isEmailMediaTypeActive", mediaTypesService.getActiveMediaTypes(mailing).contains(MediaTypes.EMAIL));
+        model.addAttribute("frameContentForm", getFrameContentForm(mailing));
     }
 
     private boolean isMailingEditable(int mailingId, Admin admin) {
@@ -304,73 +233,19 @@ public class MailingContentController implements XssCheckAware {
     }
 
     protected void loadAdditionalData(Mailing mailing, MailingContentForm form, Admin admin, Model model) {
-        if (admin.isUpdatedUxUsed()) {
-            form.setTags(mailingContentService.loadDynTags(mailing, admin.getLocale()), true);
-        } else {
-            loadDynTags(mailing, form);
-        }
-        if (admin.isRedesignedUiUsed()) {
-            loadTargets(admin, model);
-        } else {
-            loadTargetGroups(form, admin);
-        }
+        form.setTags(mailingContentService.loadDynTags(mailing), true);
+        loadTargets(admin, model);
         loadAvailableInterestGroups(form, admin);
     }
 
     private void loadTargets(Admin admin, Model model) {
         boolean showContentBlockTargetGroupsOnly = !admin.permissionAllowed(Permission.MAILING_CONTENT_SHOW_EXCLUDED_TARGETGROUPS);
-        model.addAttribute("targets", targetService.getTargetLights(admin, true, false, showContentBlockTargetGroupsOnly));
-    }
-
-    // TODO check usage and remove after ux redesign finished
-    private void loadDynTags(Mailing mailing, MailingContentForm form) {
-        Map<String, DynamicTag> tags = mailing.getDynTags();
-
-        // Grid mailing should not expose its internals (dynamic tags representing building blocks) for editing.
-        if (form.getGridTemplateId() > 0) {
-            clearBuildingBlocksFromTags(mailing, tags);
-        }
-
-        Map<String, DynTagDto> dynTags = new HashMap<>();
-
-        for (Map.Entry<String, DynamicTag> tagEntry : tags.entrySet()) {
-            DynamicTag dynTag = tagEntry.getValue();
-            DynTagDto dynTagDto = extendedConversionService.convert(dynTag, DynTagDto.class);
-
-            dynTags.put(tagEntry.getKey(), dynTagDto);
-        }
-
-        form.setTags(dynTags, true);
-    }
-
-    // TODO check usage and remove after ux redesign finished
-    private void clearBuildingBlocksFromTags(Mailing mailing, Map<String, DynamicTag> dynTags) {
-        MailingComponent htmlComponent = mailing.getComponents().get("agnHtml");
-        if (htmlComponent != null) {
-            for (String name : getAgnTags(htmlComponent.getEmmBlock(), mailing.getCompanyID())) {
-                dynTags.remove(name);
-                findTocItemDynNames(name, dynTags.keySet()).forEach(dynTags::remove);
-            }
-        }
-    }
-
-    // TODO check usage and remove after ux redesign finished
-    private List<String> findTocItemDynNames(String dynName, Collection<String> dynNames) {
-        return dynNames.stream()
-                .filter(n -> n.startsWith(dynName + AgnUtils.TOC_ITEM_SUFFIX))
-                .toList();
+        model.addAttribute("targets", targetService.getTargetLights(admin, showContentBlockTargetGroupsOnly, TargetGroupDeliveryOption.FINAL));
     }
 
     protected boolean isMailingEditable(Admin admin, int mailingId) {
         return !mailingService.isSettingsReadonly(admin, mailingId)
                 && mailingPropertiesRules.isMailingContentEditable(mailingId, admin);
-    }
-
-    private void loadTargetGroups(MailingContentForm form, Admin admin) {
-        boolean showContentBlockTargetGroupsOnly = !admin.permissionAllowed(Permission.MAILING_CONTENT_SHOW_EXCLUDED_TARGETGROUPS);
-        List<TargetLight> list = targetService.getTargetLights(admin,  true, false, showContentBlockTargetGroupsOnly);
-
-        form.setAvailableTargetGroups(list);
     }
 
     private void loadAvailableInterestGroups(MailingContentForm form, Admin admin) {
@@ -394,12 +269,8 @@ public class MailingContentController implements XssCheckAware {
         }
     }
 
-    // TODO check usage and remove after ux redesign finished
-    private List<String> getAgnTags(String content, int companyId) {
-        return agnTagService.getDynTagsNames(content, agnDynTagGroupResolverFactory.create(companyId, 0));
-    }
-
     protected void writeUserActivityLog(Admin admin, String action, String description) {
         userActivityLogService.writeUserActivityLog(admin, action, description, logger);
     }
+
 }
