@@ -10,6 +10,15 @@
 
 package com.agnitas.emm.wsmanager.dao.impl;
 
+import java.util.ArrayList;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+
+import com.agnitas.beans.PaginatedList;
+import com.agnitas.dao.impl.PaginatedBaseDaoImpl;
+import com.agnitas.dao.impl.mapper.IntegerRowMapper;
+import com.agnitas.dao.impl.mapper.StringRowMapper;
 import com.agnitas.emm.core.wsmanager.form.WebserviceUserOverviewFilter;
 import com.agnitas.emm.wsmanager.common.UnknownWebserviceUsernameException;
 import com.agnitas.emm.wsmanager.common.WebserviceUser;
@@ -21,41 +30,55 @@ import com.agnitas.emm.wsmanager.common.impl.WebserviceUserListItemImpl;
 import com.agnitas.emm.wsmanager.dao.WebserviceUserDao;
 import com.agnitas.emm.wsmanager.dao.WebserviceUserDaoException;
 import com.agnitas.emm.wsmanager.service.WebserviceUserAlreadyExistsException;
-import com.agnitas.beans.impl.PaginatedListImpl;
-import com.agnitas.dao.impl.PaginatedBaseDaoImpl;
-import com.agnitas.dao.impl.mapper.IntegerRowMapper;
-import com.agnitas.dao.impl.mapper.StringRowMapper;
 import com.agnitas.util.DbUtilities;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.jdbc.core.RowMapper;
-
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
 
 /**
  * Implementation of {@link WebserviceUserDao} interface.
  */
 public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements WebserviceUserDao {
 
-	/** Row mapper for list items. */
-	private static final WebserviceUserListItemRowMapper LIST_ITEM_ROWMAPPER = new WebserviceUserListItemRowMapper();
-
-	/** Row mapper for webservice user. */
-	private static final WebserviceUserRowMapper USER_ROWMAPPER = new WebserviceUserRowMapper();
-
+	private static final String COMPANY_ID_COLUMN = "company_id";
+	private static final String DEFAULT_DATA_SOURCE_ID_COLUMN = "default_data_source_id";
+	private static final String ACTIVE_COLUMN = "active";
+	private static final String USERNAME_COLUMN = "username";
+	private static final String COMPANY_NAME_COLUMN = "company_name";
+	private static final String DEFAULT_SORT_COLUMN = USERNAME_COLUMN;
+	private static final String LIST_ERROR = "Error listing webservice user";
 	private static final String WS_USER_TBL_NAME = "webservice_user_tbl";
-	
-	private static final List<String> SORTABLE_COLUMNS = Arrays.asList("company_id", "default_data_source_id", "active");
-	
-	private static final String DEFAULT_SORT_COLUMN = "username";
+
+	private static final List<String> SORTABLE_COLUMNS = List.of(
+		COMPANY_ID_COLUMN,
+		DEFAULT_DATA_SOURCE_ID_COLUMN,
+		ACTIVE_COLUMN);
+
+	private static final RowMapper<WebserviceUserImpl> USER_ROWMAPPER = (rs, i) -> {
+		WebserviceUserImpl user = new WebserviceUserImpl();
+		user.setCompanyID(rs.getInt(COMPANY_ID_COLUMN));
+		user.setDefaultDatasourceID(rs.getInt(DEFAULT_DATA_SOURCE_ID_COLUMN));
+		user.setUsername(rs.getString(USERNAME_COLUMN));
+		user.setActive(rs.getBoolean(ACTIVE_COLUMN));
+		user.setContactEmail(rs.getString("contact_email"));
+		return user;
+	};
+
+	private static final RowMapper<WebserviceUserListItem> LIST_ITEM_ROWMAPPER = (rs, i) -> {
+		WebserviceUserListItemImpl user = new WebserviceUserListItemImpl();
+		user.setCompanyID(rs.getInt(COMPANY_ID_COLUMN));
+		user.setDefaultDatasourceID(rs.getInt(DEFAULT_DATA_SOURCE_ID_COLUMN));
+		user.setUsername(rs.getString(USERNAME_COLUMN));
+		user.setActive(rs.getBoolean(ACTIVE_COLUMN));
+
+		if (DbUtilities.resultsetHasColumn(rs, COMPANY_NAME_COLUMN)) {
+			user.setClientName(rs.getString(COMPANY_NAME_COLUMN));
+		}
+
+		return user;
+	};
 
 	@Override
-	public PaginatedListImpl<WebserviceUserListItem> getWebserviceUserList(int companyID, String sortColumn, boolean sortDirectionAscending, int pageNumber, int pageSize) throws WebserviceUserDaoException {
+	public PaginatedList<WebserviceUserListItem> getWebserviceUserList(int companyID, String sortColumn, boolean sortDirectionAscending, int pageNumber, int pageSize) throws WebserviceUserDaoException {
 		if(!SORTABLE_COLUMNS.contains(sortColumn)) {
 			sortColumn = DEFAULT_SORT_COLUMN;
 		}
@@ -63,22 +86,22 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 		try {
 			return selectPaginatedList("SELECT username, company_id, default_data_source_id, active FROM webservice_user_tbl WHERE company_id = ?", WS_USER_TBL_NAME, sortColumn, sortDirectionAscending, pageNumber, pageSize, LIST_ITEM_ROWMAPPER, companyID);
 		} catch (Exception e) {
-			logger.error("Error listing webservice user", e);
-			throw new WebserviceUserDaoException("Error listing webservice user", e);
+			logger.error(LIST_ERROR, e);
+			throw new WebserviceUserDaoException(LIST_ERROR, e);
 		}
 	}
 
 	@Override
-	public PaginatedListImpl<WebserviceUserListItem> getWebserviceUserList(WebserviceUserOverviewFilter filter) throws WebserviceUserDaoException {
+	public PaginatedList<WebserviceUserListItem> getWebserviceUserList(WebserviceUserOverviewFilter filter) throws WebserviceUserDaoException {
 		String sortColumn = filter.getSortOrDefault(DEFAULT_SORT_COLUMN);
 
 		StringBuilder query = new StringBuilder("SELECT w.username, w.company_id, w.default_data_source_id, w.active, c.shortname AS company_name FROM webservice_user_tbl w JOIN company_tbl c ON c.company_id = w.company_id");
 		List<Object> params = applyOverviewFilter(filter, query);
 
 		try {
-			PaginatedListImpl list;
-			if (sortColumn.equals("company_name")) {
-				String sortClause = "ORDER BY LOWER(company_name) " + (filter.ascending() ? "ASC" : "DESC");
+			PaginatedList<WebserviceUserListItem> list;
+			if (sortColumn.equals(COMPANY_NAME_COLUMN)) {
+				String sortClause = "ORDER BY LOWER(c.shortname) " + (filter.ascending() ? "ASC" : "DESC");
 				list = selectPaginatedListWithSortClause(query.toString(), sortClause, sortColumn, filter.ascending(),
 						filter.getPage(), filter.getNumberOfRows(), LIST_ITEM_ROWMAPPER, params.toArray());
 			} else {
@@ -92,8 +115,8 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 
 			return list;
 		} catch (Exception e) {
-			logger.error("Error listing webservice user", e);
-			throw new WebserviceUserDaoException("Error listing webservice user", e);
+			logger.error(LIST_ERROR, e);
+			throw new WebserviceUserDaoException(LIST_ERROR, e);
 		}
 	}
 
@@ -126,7 +149,7 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 	}
 
 	@Override
-	public PaginatedListImpl<WebserviceUserListItem> getWebserviceUserMasterList(String sortColumn, boolean sortDirectionAscending, int pageNumber, int pageSize) throws WebserviceUserDaoException {
+	public PaginatedList<WebserviceUserListItem> getWebserviceUserMasterList(String sortColumn, boolean sortDirectionAscending, int pageNumber, int pageSize) throws WebserviceUserDaoException {
 		if(!SORTABLE_COLUMNS.contains(sortColumn)) {
 			sortColumn = DEFAULT_SORT_COLUMN;
 		}
@@ -134,8 +157,8 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 		try {
 			return selectPaginatedList("SELECT username, company_id, default_data_source_id, active FROM webservice_user_tbl", WS_USER_TBL_NAME, sortColumn, sortDirectionAscending, pageNumber, pageSize, LIST_ITEM_ROWMAPPER);
 		} catch (Exception e) {
-			logger.error("Error listing webservice user", e);
-			throw new WebserviceUserDaoException("Error listing webservice user", e);
+			logger.error(LIST_ERROR, e);
+			throw new WebserviceUserDaoException(LIST_ERROR, e);
 		}
 	}
 
@@ -155,15 +178,15 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 	@Override
 	public void updateUser(final WebserviceUser user) throws WebserviceUserDaoException {
 		try {
-			int count = update("UPDATE webservice_user_tbl SET active = ?, contact_email = ? WHERE username = ?", user.isActive(), user.getContactEmail(), user.getUsername());
+			int count = update("UPDATE webservice_user_tbl SET active = ?, contact_email = ? WHERE username = ?", user.isActive() ? 1 : 0, user.getContactEmail(), user.getUsername());
 			if (count == 0) {
 				if (logger.isInfoEnabled()) {
-					logger.info("Unknown webservice user '" + user.getUsername() + "'");
+					logger.info("Unknown webservice user '{}'", user.getUsername());
 				}
 				throw new UnknownWebserviceUsernameException(user.getUsername());
 			}
 		} catch (Exception e) {
-			logger.error("Error updating webservice user '" + user.getUsername() + "*'", e);
+			logger.error("Error updating webservice user '{}*'", user.getUsername(), e);
 			throw new WebserviceUserDaoException("Error updating webservice user '" + user.getUsername() + "*'", e);
 		}
 	}
@@ -174,12 +197,12 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 			int rows = update("UPDATE webservice_user_tbl SET password_encrypted = ? WHERE username = ?", passwordHash, username);
 			if (rows == 0) {
 				if (logger.isInfoEnabled()) {
-					logger.info("Unknown webservice user '" + username + "'");
+					logger.info("Unknown webservice user '{}'", username);
 				}
 				throw new UnknownWebserviceUsernameException(username);
 			}
 		} catch (Exception e) {
-			logger.error("Error updating password hash for webservice user '" + username + "'", e);
+			logger.error("Error updating password hash for webservice user '{}'", username, e);
 			throw new WebserviceUserDaoException("Error updating password hash for webservice user '" + username + "'", e);
 		}
 	}
@@ -206,43 +229,6 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 			throw new WebserviceUserDaoException("Error creating new webservice user", e);
 		}
 	}
-	
-	public static class WebserviceUserRowMapper implements RowMapper<WebserviceUser> {
-
-		@Override
-		public WebserviceUser mapRow(ResultSet resultSet, int row) throws SQLException {
-			WebserviceUserImpl user = new WebserviceUserImpl();
-			
-			user.setCompanyID(resultSet.getInt("company_id"));
-			user.setDefaultDatasourceID(resultSet.getInt("default_data_source_id"));
-			user.setUsername(resultSet.getString("username"));
-			user.setActive(resultSet.getBoolean("active"));
-			user.setContactEmail(resultSet.getString("contact_email"));
-			
-			return user;
-		}
-	
-	}
-
-	public static class WebserviceUserListItemRowMapper implements RowMapper<WebserviceUserListItem> {
-	
-		@Override
-		public WebserviceUserListItem mapRow(ResultSet resultSet, int row) throws SQLException {
-			WebserviceUserListItemImpl user = new WebserviceUserListItemImpl();
-	
-			user.setCompanyID(resultSet.getInt("company_id"));
-			user.setDefaultDatasourceID(resultSet.getInt("default_data_source_id"));
-			user.setUsername(resultSet.getString("username"));
-			user.setActive(resultSet.getBoolean("active"));
-
-			if (DbUtilities.resultsetHasColumn(resultSet, "company_name")) {
-				user.setClientName(resultSet.getString("company_name"));
-			}
-	
-			return user;
-		}
-	
-	}
 
 	@Override
 	public int getNumberOfWebserviceUsers(int companyID) {
@@ -253,13 +239,13 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 		}
 	}
 	
-	private final Set<String> loadGrantedPermissions(final String username) {
+	private Set<String> loadGrantedPermissions(final String username) {
 		final String sql = "SELECT endpoint FROM webservice_permission_tbl WHERE username=?";
 		
 		return new HashSet<>(select(sql, StringRowMapper.INSTANCE, username));
 	}
 	
-	private final Set<Integer> loadGrantedPermissionGroups(final String username) {
+	private Set<Integer> loadGrantedPermissionGroups(final String username) {
 		final String sql = "SELECT group_ref FROM webservice_user_group_tbl WHERE username=?";
 		
 		return new HashSet<>(select(sql, IntegerRowMapper.INSTANCE, username));
@@ -271,7 +257,7 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 		saveGrantedPermissionGroups(user);
 	}
 	
-	private final void saveGrantedPermissions(final WebserviceUser user) {
+	private void saveGrantedPermissions(final WebserviceUser user) {
 		final String deletePermissions = "DELETE FROM webservice_permission_tbl WHERE username=?";
 		this.update(deletePermissions, user.getUsername());
 		
@@ -281,7 +267,7 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 		}
 	}
 	
-	private final void saveGrantedPermissionGroups(final WebserviceUser user) {
+	private void saveGrantedPermissionGroups(final WebserviceUser user) {
 		final String deleteGroupsSql = "DELETE FROM webservice_user_group_tbl WHERE username=?";
 		this.update(deleteGroupsSql, user.getUsername());
 		
@@ -296,5 +282,17 @@ public class WebserviceUserDaoImpl extends PaginatedBaseDaoImpl implements Webse
 		update("DELETE FROM webservice_user_group_tbl WHERE username = ?", username);
 		update("DELETE FROM webservice_permission_tbl WHERE username = ?", username);
 		return update("DELETE FROM webservice_user_tbl WHERE username = ?", username) == 1;
+	}
+
+	@Override
+	public List<String> getUsernames() {
+		String query = "SELECT wsadm.username FROM webservice_user_tbl wsadm, company_tbl comp WHERE wsadm.company_id = comp.company_id";
+		return select(query, StringRowMapper.INSTANCE);
+	}
+
+	@Override
+	public List<String> getUsernames(int companyId) {
+		String query = "SELECT wsadm.username FROM webservice_user_tbl wsadm, company_tbl comp WHERE wsadm.company_id = comp.company_id AND wsadm.company_id = ?";
+		return select(query, StringRowMapper.INSTANCE, companyId);
 	}
 }
